@startuml entity_relation_diagram
entity library {
  PK id uuid not null
  name string not null
  created timestamp not null
  modified timestamp not null
}

entity library_path {
  PK id uuid not null
  FK library_id uuid not null
  path string not null
  created timestamp not null
  modified timestamp not null
}
library --* library_path

entity video {
  PK id uuid not null
  FK library_path_id uuid not null
  relative path string not null
  title string not null
  file_name string not null
  height int not null
  width int not null
  runtime bigint not null
  size bigint not null
  checksum string
  added timestamp not null
  deleted bool not null
  exists bool not null
  created timestamp not null
  modified timestamp not null
}
library_path --* video

enum job_type_enum {
  update_existing_videos
  scan_path
  generate_checksum
}

enum job_status_enum {
  not_started
  in_progress
  failed
  completed
  cancelled
}

entity job {
  PK id uuid not null
  job_type job_type_enum not null
  job_status job_status_enum not null
  data json
  created timestamp not null
  modified timestamp not null
}
job .. job_type_enum
job .. job_status_enum
@enduml
